# Excel_MCP

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  V2.X开发记录文档.md  config.example.yaml  install.bat  install.ps1  mcp.example.json  pyproject.toml
.trae/documents/: v2.2.1-runtime-stability-fix-plan.md
docs/: profiles_and_scene_matrix.md  总体设计规范V2.md
docs/clients/: trae_usage.md
examples/: mcp.automation.example.json  mcp.basic_edit.example.json  mcp.custom-bundles.example.json
excelforge/: __init__.py  __main__.py  config.py  main.py  server.py  tool_registry.py
excelforge/gateway/: bundles.yaml  host.py  logging_setup.py  profiles.yaml  runtime_client_manager.py  runtime_identity.py  tool_manifest_registry.py
excelforge/models/: audit_models.py  backup_models.py  common.py  error_models.py  format_models.py  formula_models.py  named_range_models.py  range_models.py  rollback_models.py  sheet_models.py  snapshot_models.py  vba_models.py  workbook_models.py
excelforge/persistence/: audit_repo.py  backup_repo.py  cleanup.py  db.py  snapshot_repo.py
excelforge/runtime/: com_utils.py  excel_app.py  excel_worker.py  handle_ownership.py  main.py  retry_policy.py  workbook_registry.py  worker_manager.py
excelforge/runtime_api/: dispatcher.py  range_api.py  recovery_api.py  server_api.py  sheet_api.py
excelforge/services/: audit_service.py  backup_service.py  format_service.py  formula_service.py  named_range_service.py  operation_service.py  range_service.py  rollback_service.py  server_service.py  sheet_service.py  vba_scanner.py  (+3 more)
tests/: conftest.py
(+40 files in other folders)
