[project]
name = "excelforge"
version = "1.0.1"
description = "Excel MCP toolset with STA worker, snapshot rollback and audit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8,<3",
  "PyYAML>=6.0.1,<7",
  "mcp>=1.2.0",
  "pywin32>=306; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-cov>=5.0,<6",
]

[project.scripts]
excelforge = "excelforge.main:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["excelforge*"]

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
addopts = "-q"
markers = [
  "integration: requires local Excel Desktop with pywin32",
  "e2e: end-to-end MCP stdio tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
